--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
     3: '#a000f0', // T - purple
     4: '#00f000', // S - green
     5: '#f00000', // Z - red
-    6: '#0000f0', // J - blue
+    6: '#3366ff', // J - blue
     7: '#f0a000', // L - orange
   };
 
