--- a/index.html
+++ b/index.html
@@ -628,8 +628,8 @@
         }
 
         function getLockDelay(lvl) {
-          // Scale lock delay with level: 500ms at level 1, down to 150ms at level 15+
-          return Math.max(150, 500 - (lvl - 1) * 25);
+          // Gentle lock delay scaling: 500ms at level 1, down to 350ms at level 15+
+          return Math.max(350, 500 - (lvl - 1) * 10);
         }
 
         // ─── DOM ───
