fixed a bug with the music

--- a/index.html
+++ b/index.html
@@ -1337,6 +1337,7 @@
           gameoverOverlay.classList.add("hidden");
           pauseOverlay.classList.add("hidden");
 
+          updateMuteButton();
           updateUI();
           spawn();
 
