modified home page message a little bit

--- a/index.html
+++ b/index.html
@@ -139,6 +139,14 @@
         margin-bottom: 16px;
       }
 
+      .overlay-content .desktop-only {
+        font-size: 14px;
+        color: #fff;
+        margin-bottom: 16px;
+        margin-top: -4px;
+        font-style: italic;
+      }
+
       .overlay-content .prompt {
         font-size: 16px;
         color: #888;
@@ -298,6 +306,7 @@
     <div class="overlay" id="start-overlay">
       <div class="overlay-content">
         <h1>TETRIS</h1>
+        <p class="desktop-only">Desktop Only</p>
         <p class="prompt">Press any key to start</p>
       </div>
     </div>
