fixed card centering

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         color: #fff;
       }
 
-      #next-canvas {
+      .panel-box canvas {
         display: block;
         margin: 0 auto;
       }
